--- a/AdaptiveQ/public/stylesheets/question-wip.css
+++ b/AdaptiveQ/public/stylesheets/question-wip.css
@@ -214,7 +214,6 @@ input[type="radio"], input[type="checkbox"] {
 }
 
 .option label {
-  height: 35px;
   padding: 7px;
 }
 
